removed target folder and added it to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 #Compiled/Packaged files and directories
 out/
+target/
 *.class
 *.jar
 
@@ -11,4 +12,4 @@ out/
 *.properties
 
 #Target folder
-*/target/*
+
